--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -33,6 +33,8 @@
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "i18next": "^24.2.3",
+    "i18next-chained-backend": "^4.6.2",
+    "i18next-http-backend": "^3.0.2",
     "i18next-vue": "^5.2.0",
     "lodash": "^4.17.21",
     "nanoid": "^5.1.5",
