--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -16,7 +16,10 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "story:dev": "histoire dev",
+    "story:build": "histoire build",
+    "story:preview": "histoire preview"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.13.5",
@@ -47,6 +50,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@histoire/plugin-vue": "1.0.0-alpha.2",
     "@rollup/plugin-yaml": "^4.1.2",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.13.13",
@@ -57,6 +61,7 @@
     "eslint": "^9.23.0",
     "eslint-plugin-oxlint": "^0.15.15",
     "eslint-plugin-vue": "^9.33.0",
+    "histoire": "1.0.0-alpha.2",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "oxlint": "^0.15.15",
