--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -26,6 +26,7 @@
     "@comfyorg/litegraph": "^0.11.2",
     "@element-plus/icons-vue": "^2.3.1",
     "@faker-js/faker": "^9.6.0",
+    "@tailwindcss/vite": "^4.0.17",
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
     "@test-battle/parser": "workspace:^",
@@ -40,9 +41,11 @@
     "i18next-http-backend": "^3.0.2",
     "i18next-vue": "^5.2.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0",
@@ -53,6 +56,7 @@
     "@histoire/plugin-vue": "1.0.0-alpha.2",
     "@rollup/plugin-yaml": "^4.1.2",
     "@tsconfig/node22": "^22.0.1",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.13",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
