--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -21,11 +21,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@anatine/zod-mock": "^3.13.5",
-    "@comfyorg/litegraph": "^0.11.7",
+    "@anatine/zod-mock": "^3.14.0",
+    "@comfyorg/litegraph": "^0.11.10",
     "@element-plus/icons-vue": "^2.3.1",
     "@faker-js/faker": "^9.6.0",
-    "@tailwindcss/vite": "^4.0.17",
+    "@tailwindcss/vite": "^4.1.3",
     "@test-battle/client": "workspace:^",
     "@test-battle/const": "workspace:^",
     "@test-battle/interface": "workspace:^",
@@ -46,7 +46,8 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "tailwindcss": "^4.0.17",
+    "seer2-pet-animator": "^0.0.17",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.0",
@@ -56,36 +57,36 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@rollup/plugin-yaml": "^4.1.2",
-    "@storybook/addon-essentials": "^8.6.11",
-    "@storybook/addon-onboarding": "^8.6.11",
-    "@storybook/blocks": "^8.6.11",
-    "@storybook/experimental-addon-test": "^8.6.11",
-    "@storybook/test": "^8.6.11",
-    "@storybook/vue3": "^8.6.11",
-    "@storybook/vue3-vite": "^8.6.11",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-onboarding": "^8.6.12",
+    "@storybook/blocks": "^8.6.12",
+    "@storybook/experimental-addon-test": "^8.6.12",
+    "@storybook/test": "^8.6.12",
+    "@storybook/vue3": "^8.6.12",
+    "@storybook/vue3-vite": "^8.6.12",
     "@tsconfig/node22": "^22.0.1",
     "@types/markdown-it": "^14.1.2",
-    "@types/node": "^22.13.16",
+    "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.23.0",
-    "eslint-plugin-oxlint": "^0.16.4",
+    "eslint": "^9.24.0",
+    "eslint-plugin-oxlint": "^0.16.5",
     "eslint-plugin-storybook": "^0.12.0",
     "eslint-plugin-vue": "^10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.16.4",
+    "oxlint": "^0.16.5",
     "playwright": "^1.51.1",
     "prettier": "^3.5.3",
-    "storybook": "^8.6.11",
-    "typescript": "~5.8.2",
+    "storybook": "^8.6.12",
+    "typescript": "~5.8.3",
     "unplugin-auto-import": "^19.1.2",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.4",
+    "vite": "^6.2.5",
     "vite-plugin-static-copy": "^2.3.0",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.1.1",
