--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -46,7 +46,8 @@
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "seer2-pet-animator": "^0.0.17",
+    "rxjs": "^7.8.2",
+    "seer2-pet-animator": "^0.0.18",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
