--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -44,11 +44,12 @@
     "i18next-vue": "^5.2.0",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
+    "mitt": "^3.0.1",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "rxjs": "^7.8.2",
-    "seer2-pet-animator": "^0.0.18",
+    "seer2-pet-animator": "^0.0.22",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
@@ -60,7 +61,6 @@
     "@chromatic-com/storybook": "^3.2.6",
     "@rollup/plugin-yaml": "^4.1.2",
     "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-onboarding": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
     "@storybook/experimental-addon-test": "^8.6.12",
     "@storybook/test": "^8.6.12",
