--- a/packages/battle/package.json
+++ b/packages/battle/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "@test-battle/const": "workspace:*",
+    "jsondiffpatch": "^0.7.3",
     "nanoid": "^5.1.5",
     "prando": "^6.0.1"
   }
