--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -25,6 +25,7 @@
     "i18next": "^24.2.3",
     "i18next-chained-backend": "^4.6.2",
     "i18next-fs-backend": "^2.6.0",
+    "jsondiffpatch": "^0.7.3",
     "marked": "^15.0.8",
     "marked-terminal": "^7.3.0"
   },
