--- a/packages/const/package.json
+++ b/packages/const/package.json
@@ -13,5 +13,8 @@
   },
   "author": "yuuinih",
   "license": "MIT",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "jsondiffpatch": "^0.7.3"
+  }
 }
