--- a/packages/web-ui/package.json
+++ b/packages/web-ui/package.json
@@ -42,6 +42,7 @@
     "i18next-chained-backend": "^4.6.2",
     "i18next-http-backend": "^3.0.2",
     "i18next-vue": "^5.2.0",
+    "jsondiffpatch": "^0.7.3",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
     "mitt": "^3.0.1",
