chore: add watch code

--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "url": "https://github.com/arcadia-eternity/arcadia-eternity.git"
   },
   "scripts": {
-    "build": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run build&&pnpm run build:cli",
-    "clean": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run clean&&rm -rf dist",
+    "build": "run-p build:package build:cli",
+    "watch": "run-p watch:package watch:cli",
+    "clean": "run-p clean:package clean:cli",
+    "build:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run build&&pnpm run build:cli",
+    "watch:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui --parallel run watch",
+    "clean:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run clean",
     "build:cli": "esbuild ./bin/cli.ts --bundle --format=esm --platform=node --outdir=dist/bin --allow-overwrite --external:./node_modules/*",
+    "watch:cli": "esbuild ./bin/cli.ts --bundle --format=esm --platform=node --outdir=dist/bin --watch --external:./node_modules/*",
+    "clean:cli": "rm -rf dist",
     "generate": "pnpm --filter @arcadia-eternity/schema run generate",
     "generate:csbind": "tsx packages/csbind/script/generate.ts",
     "cli": "tsx ./bin/cli.ts",
@@ -53,6 +59,7 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-vue": "^10.0.0",
     "jest": "^29.7.0",
+    "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "quicktype": "^23.0.171",
     "quicktype-core": "^23.0.171",
