--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
     "build": "pnpm run build:code && pnpm run build:types",
     "clean": "rm -rf dist",
     "build:code": "esbuild index.ts --bundle --format=esm --outdir=dist --allow-overwrite --external:./node_modules/*",
+    "watch": "esbuild index.ts --bundle --format=esm --outdir=dist --watch --external:./node_modules/*",
     "build:types": "tsc --emitDeclarationOnly"
   },
   "keywords": [],
