chore: migrate to rollup

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run build&&pnpm run build:cli",
     "watch:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui --parallel run watch",
     "clean:package": "pnpm --filter \"./packages/**\" --filter=!@arcadia-eternity/web-ui run clean",
-    "build:cli": "esbuild ./bin/cli.ts --bundle --format=esm --platform=node --outdir=dist/bin --allow-overwrite --external:./node_modules/*",
-    "watch:cli": "esbuild ./bin/cli.ts --bundle --format=esm --platform=node --outdir=dist/bin --watch --external:./node_modules/*",
+    "build:cli": "rollup -c",
+    "watch:cli": "rollup -c --watch",
     "clean:cli": "rm -rf dist",
     "generate": "pnpm --filter @arcadia-eternity/schema run generate",
     "generate:csbind": "tsx packages/csbind/script/generate.ts",
@@ -48,13 +48,15 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@pinia/testing": "^1.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.0",
     "@typescript-eslint/eslint-plugin": "^8.29.1",
     "bun-types": "^1.2.8",
-    "esbuild": "^0.25.2",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-vue": "^10.0.0",
@@ -63,6 +65,8 @@
     "prettier": "3.5.3",
     "quicktype": "^23.0.171",
     "quicktype-core": "^23.0.171",
+    "rollup": "^4.40.0",
+    "rollup-plugin-node-externals": "^8.0.0",
     "ts-jest": "^29.3.1",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
