--- a/packages/schema/tsconfig.json
+++ b/packages/schema/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "composite": true,
     "lib": ["ESNext"],
     "module": "ESNext",
     "moduleResolution": "bundler",
@@ -8,7 +10,7 @@
     "verbatimModuleSyntax": true,
     "declaration": true,
     "declarationMap": true,
-    "strictPropertyInitialization": false,
+
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
