--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -12,8 +12,8 @@
   "scripts": {
     "build": "pnpm run build:code && pnpm run build:types",
     "clean": "rm -rf dist",
-    "build:code": "esbuild index.ts --bundle --format=esm --platform=node --outdir=dist --allow-overwrite --external:./node_modules/*",
-    "watch": "esbuild index.ts --bundle --format=esm --platform=node --outdir=dist --watch --external:./node_modules/*",
+    "build:code": "rollup -c",
+    "watch": "rollup -c --watch",
     "build:types": "tsc --emitDeclarationOnly"
   },
   "keywords": [],
