--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@swc/core": "^1.11.21",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
@@ -67,6 +68,7 @@
     "quicktype-core": "^23.0.171",
     "rollup": "^4.40.0",
     "rollup-plugin-node-externals": "^8.0.0",
+    "rollup-plugin-swc3": "^0.12.1",
     "ts-jest": "^29.3.1",
     "tslib": "^2.8.1",
     "tsx": "^4.19.3",
