--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "typescript-json-schema": "^0.65.1",
     "undici-types": "^7.7.0"
   },
-  "bin": "./dist/bin/cli.js",
+  "bin": "./dist/cli.js",
   "workspaces": [
     "packages/*"
   ]
