--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -476,3 +476,22 @@
     conditions:
       - type: selfBeDamaged
   consumesStacks: 1
+- id: effect_mark_heal_self_1_8_turnEnd
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    - type: heal
+      target: self
+      value:
+        type: dynamic
+        selector:
+          base: self
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: maxHp
+            - type: divide
+              arg: 8
