--- a/data/mark.yaml
+++ b/data/mark.yaml
@@ -8,7 +8,7 @@
     - status
   config: &status_config
     persistent: false
-    stackable: false
+    stackable: true
     stackStrategy: refresh
     destroyable: true
     duration: 2
@@ -29,7 +29,7 @@
 - id: mark_mabi
   config:
     persistent: false
-    stackable: false
+    stackable: true
     stackStrategy: refresh
     destroyable: true
     duration: 5
@@ -67,7 +67,7 @@
 - id: mark_zuzhou
   config:
     persistent: false
-    stackable: false
+    stackable: true
     stackStrategy: refresh
     destroyable: true
     duration: 3
@@ -84,7 +84,7 @@
     duration: 1
     persistent: false
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
   effect:
@@ -103,7 +103,7 @@
     duration: 1
     persistent: false
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
   effect:
@@ -114,7 +114,7 @@
     duration: 1
     persistent: false
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
   effect:
@@ -163,7 +163,7 @@
     duration: 1
     persistent: true
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: false
@@ -208,7 +208,7 @@
     duration: 3
     persistent: false
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
   effect:
@@ -228,7 +228,7 @@
     duration: 1
     persistent: true
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: true
@@ -239,7 +239,7 @@
     duration: 1
     persistent: true
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: true
@@ -251,7 +251,7 @@
     duration: 3
     persistent: true
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: true
@@ -262,13 +262,23 @@
     duration: 3
     persistent: true
     maxStacks: 1
-    stackable: false
+    stackable: true
     stackStrategy: extend
     destroyable: true
     keepOnSwitchOut: true
   effect:
     - effect_mark_set_health_to_1_on_damage
 - id: mark_huifu
+  config:
+    duration: 5
+    persistent: false
+    maxStacks: 1
+    stackable: true
+    stackStrategy: refresh
+    destroyable: true
+    keepOnSwitchOut: true
+  effect:
+    - effect_mark_heal_self_1_8_turnEnd
 - id: mark_zhongzinengliang
   config:
     duration: -1
