--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -135,15 +135,18 @@
   sureHit: false
   ignoreShield: false
   tags: []
+  #TODO: effect
 - id: skill_wujindaxuanwo
   element: Water
   category: Climax
   power: 170
   rage: 100
   accuracy: 95
-  sureHit: false
+  sureHit: true
   ignoreShield: false
   tags: []
+  effect:
+    - effect_skill_add_mark_foe_nishui_10_percent
 - id: skill_shuihuajianshe
   element: Water
   category: Special
@@ -317,9 +320,11 @@
   power: 175
   rage: 100
   accuracy: 95
-  sureHit: false
+  sureHit: true
   ignoreShield: false
   tags: []
+  effect:
+    - effect_skill_add_mark_foe_shaoshang_10_percent
 - id: skill_yanzhiyizhi
   element: Fire
   category: Status
@@ -482,9 +487,11 @@
   power: 165
   rage: 100
   accuracy: 95
-  sureHit: false
+  sureHit: true
   ignoreShield: false
   tags: []
+  effect:
+    - effect_skill_add_mark_huifu
 - id: skill_qianyesha
   element: Grass
   category: Special
