--- a/data/effect_skill.yaml
+++ b/data/effect_skill.yaml
@@ -745,7 +745,22 @@
     mark:
       type: entity:baseMark
       value: mark_nishui
-  condition: *condition_self_use_skill_template
+  condition:
+    type: every
+    conditions:
+      - *condition_self_use_skill_template
+      - &condition_foe_not_water_element
+        type: evaluate
+        target:
+          base: foe
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: element
+        evaluator:
+          type: notSame
+          value: Water
 - id: effect_skill_add_mark_foe_nishui_10_percent
   trigger: OnHit
   priority: 0
@@ -760,18 +775,7 @@
     conditions:
       - type: selfUseSkill
       - *condition_probability_10_percent_template
-      - &condition_foe_not_water_element
-        type: evaluate
-        target:
-          base: foe
-          chain:
-            - type: select
-              arg:
-                type: base
-                arg: element
-        evaluator:
-          type: notSame
-          value: Water
+      - *condition_foe_not_water_element
 - id: effect_skill_add_mark_huifu
   trigger: OnHit
   priority: 0
